@@ -3,7 +3,16 @@ v.3.6.3
 - Added Weapon Ammo to Weapon Smith level 3 Villagers.
 - Added Argent Tools to Tool Smith Level 3 Villagers.
 - Added E1M! Blocks to Mason Level 3 Villagers.
-- Tons of new configs for spawning and damage thanks to C0RNDOG!
-- Tons of AI fixes for mob attacks, they will now properly attack at the targets middle instead of feet and attacks have a higher weight thanks to C0RNDOG!.
 - Arch-vile and Mancubus fire attacks are now setting the target on fire properly.
 - Mancubus won't hurt itself with it's fire based attacks. 
+
+- Added over 100 config options - every single mob is now customisable in terms of:
+-- individual spawn weight; 
+-- min & max Y for spawning;
+-- biome dictionary & specific biome support;
+-- attributes: HP, melee/ranged damage, ground/fly speed
+- Ranged mobs now shoot accurately at you
+- Many mobs now correctly lock on to you when targeting
+- Added a far more difficult strafe AI for multiple ranged mobs.
+- Added a convergence AI for flying mobs to avoid them just flying away while they attack you
+- 
